# iroha-nihoheto

./: .gitignore  README.md
anynote/: Blender_Note.adoc  Photoshop_Note.adoc
c++/: .gitignore  CMakeLists.txt  async0.cxx  behaviour.cxx  concept0.cxx  coroutine.cxx  expected.cxx  fold0.cxx  generator.cxx  hana0.cxx  invocable.cxx  sequence.cxx  util.hpp
cpc/: .clang-format  .gitignore  CMakeLists.txt  README.md  Readme.md  array2d.h  challenge.h  chg001.cxx  chg002.cxx  chg003.cxx  chg004.cxx  chg005.cxx  chg006.cxx  chg007.cxx  chg008.cxx  chg010.cxx  chg012.cxx  chg013.cxx  chg014.cxx  chg015.cxx  chg018.cxx  chg020.cxx  chg023.cxx  chg024.cxx  chgtest.cxx  exception_util.h  ipv4.h  minimum.h  sequence_view.h  str_util.h  temperature.h
cpc/include/: adjacent_view.h  challenge.h  coro_util.h  cryption.h  dbl_buffer.h  functional.h  graph.h  ipv4.h  logger.h  movie_data.h  observable_vector.h  prior_que.h  quicksort.h  random.h  ring_buffer.h  str_util.h  typetool.h  zip_view.h
cpc/src/: CMakeLists.txt  chg001.cxx  chg002.cxx  chg003.cxx  chg004.cxx  chg006.cxx  chg008.cxx  chg009.cxx  chg011.cxx  chg012.cxx  chg013.cxx  chg014.cxx  chg015.cxx  chg016.cxx  chg017.cxx  chg018.cxx  chg019.cxx  chg021.cxx  chg022.cxx  chg023.cxx  chg024.cxx  chg025.cxx  chg026.cxx  chg027.cxx  chg028.cxx  chg029.cxx  chg030.cxx  chg031.cxx  chg032.cxx  chg033.cxx  chg034.cxx  chg035.cxx  chg036.cxx  chg037.cxx  chg038.cxx  chg039.cxx  chg040.cxx  chg045.cxx  chg046.cxx  chg047.cxx  (+52 more)
docs/: InputMachine.html  incrementalHighlight.js  index.md
haskell/Scheme/: .gitignore  ChangeLog.md  Scheme.cabal  package.yaml
haskell/Scheme/app/: Main.hs
haskell/Scheme/src/: Lib.hs
haskell/rwh/: .gitignore  ChangeLog.md  README.md  package.yaml
haskell/rwh/src/: FileSystem.hs
html/: InputMachine.html  incrementalHighlight.js  webservice.py
js/: nodejs.md
lectnote/: logical_solution.md  logicalthink.md
markdown/: mariadb.md  memo.md
ml/: Hello Tensorflow Tutorial 1.ipynb  TF data CSV.ipynb  TensorflowTutorial Mnist Fashion.ipynb  hello.py
notebook/: assertive_communication.md
notebook/math/: ComplexPlot0.ipynb
python/: Scikit digit test.ipynb  memo.md  pyactive.sh
python/ZeroDL/: Backpropagation.ipynb  Gradient.ipynb  LossFunction.ipynb  NeuralNetwork.ipynb  Perceptron.ipynb  StochasticGradientDescent.ipynb  TwoLayerNetwork.ipynb
python/basic/: generator.py
python/matrix/: ComplexPlot0.ipynb
python/syntax/: basic.py
vscsharp/Iroha/: Iroha.sln
vscsharp/Iroha/CoreTest/: CoreTest.csproj  Parse.cs
vscsharp/Iroha/Iroha/: Hello.cs  Iroha.csproj
vscsharp/Iroha/Mine/: Functional.cs  Maybe.cs  MaybeHelpers.cs  Mine.csproj
vscsharp/Iroha/Mine/Properties/: AssemblyInfo.cs
vscsharp/Iroha/MineTests/: MaybeTests.cs  MineTests.csproj
vscsharp/Iroha/MineTests/Properties/: AssemblyInfo.cs
vscsharp/Iroha/RegexSensei/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RegexOptionMenuConverter.cs  RegexSensei.csproj  RegexSenseiModel.cs  RegexSenseiViewModel.cs  packages.config
vscsharp/Iroha/RegexSensei/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
vscsharp/Iroha/RegexSenseiTests/: RegexSenseiModelTests.cs  RegexSenseiTests.csproj
vscsharp/Iroha/RegexSenseiTests/Properties/: AssemblyInfo.cs
